    - distutils build plugin: use default interpreter symlink in install step
      (if interpreter version matches the default one) - this will force
      distutils to not hardcode interpreter version in shebangs
    - fix problem with relative paths when dh's --sourcedirectory is used
    - add --name (PYBUILD_NAME) option
  * Disable two tests in test201 dir if /usr/bin/python2.6 is not available
  * Replace python-docutils build dependency with python3-docutils (both
    provide rst2man)

  [ Dmitry Shachnev ]
  * Make sure tests do not require python-support.
  * Add "dh-python" and "nosetests" autopkgtests.

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 25 Aug 2013 12:39:39 +0200

dh-python (1.20130819-1) unstable; urgency=low

  * Do not translate X-Python{,3}-Version into Depends if there are no Python
    files in the package
  * pybuild's distutils build plugin: set --root only in install step.
    dh doesn't pass DESTDIR in other steps and hence files for single binary
    packages ended in debian/tmp by default (closes: 719434)
  * Fix typo in plugin_cmake.py (thanks to D. Barbier, closes: #719528)
  * pybuild: --test-nose/--test-pytest have higher priority than setup.py's
    test_suite now
  * pybuild.pm: remove .pyc files in clean target
  * pybuild: directory paths escaping fixed
  * install README.PyDist file in dh-python package (closes: #698144)
  * Replace "libpython3.3-stdlib, python3.2" build depentency with
    libpython3-stdlib (which is already in unstable)

 -- Piotr Ożarowski <piotr@debian.org>  Mon, 19 Aug 2013 10:55:56 +0200

dh-python (1.20130807-1) unstable; urgency=low

  * dh_python3: do not add multiarch triplets in python3.2's extensions -
    multiarch support was disabled in this interpreter
  * dh_pypy: fix prerm script to remove .pyc files (thanks to Jakub Wilk)
  * pybuild:
    - rename PYBUILD_DEBUG env. var. to PYBUILD_VERBOSE
    - run `pypy -m unittest discover -v` in test target for pypy interpreter